Prueba_grabadora_sonido/Pregunta_Roberto.txt
       Voy actualizando lo que pasa:

       12/05

Hola, lo que está entre [] es el error del código actual y lo demás es de lo que modifiqué anteriormente:

Arduino:1.8.13 (Windows 7), Tarjeta:"Arduino Nano, ATmega328P (Old Bootloader)"
[

C:\Users\facunorma\Desktop\Prueba\Prueba.ino: In function 'void loop()':
C:\Users\facunorma\Desktop\Prueba\Prueba.ino:41:46: warning: ISO C++ forbids converting a string constant to 'char*' [-Wwrite-strings]
       audio.startRecording("1.wav", 16000, A0);
                                              ^
C:\Users\facunorma\Desktop\Prueba\Prueba.ino:49:32: warning: ISO C++ forbids converting a string constant to 'char*' [-Wwrite-strings]
     audio.stopRecording("1.wav");
                               ^
]

C:\Users\facunorma\Documents\Arduino\libraries\TMRpcm\TMRpcm.cpp: In member function 'byte TMRpcm::metaInfo(boolean, char*, char*, byte)':
C:\Users\facunorma\Documents\Arduino\libraries\TMRpcm\TMRpcm.cpp:1382:18: warning: ISO C++ forbids converting a string constant to 'char*' [-Wwrite-strings]
   char* datStr = "LIST";
                  ^~~~~~
.
. (acá hay mas errores)
.

C:\Users\facunorma\Documents\Arduino\libraries\TMRpcm\TMRpcm.cpp:1621:21: error: 'vol' was not declared in this scope
  if (!rut.openRoot(&vol)) {}//Serial.println("openRoot failed"); }
                     ^~~
Se encontraron varias bibliotecas para "SdFat.h"
Usado: C:\Users\facunorma\Documents\Arduino\libraries\SdFat
 No usado: C:\Program Files\Arduino\libraries\SdFat
 No usado: C:\Users\facunorma\Documents\Arduino\libraries\arduino_114439
exit status 1
Error compilando para la tarjeta Arduino Nano.

Este informe podría contener más información con
"Mostrar salida detallada durante la compilación"
opción habilitada en Archivo -> Preferencias.

       13/05

Si compilo cualquier otro archivo.ino y hay algun error, el error que me tira al terminar de compilar es el error propio más el error antes dicho (el del día 12/05).
Lo que es bueno es que si al compilar el archivo.ino no hay error, entonces no me hace problema y todo funciona normalmente. 
Conclusión, nose porque si hay error al compilar me muestra otro error de otro archivo que ni siquiera tengo abierto (y además modifiqué el archivo en donde tuve ese
problema de forma que al compilarlo el error desaparezca y desapareció, pero aún así al compilar otro archivo con error me siguen apareciendo los errores anteriores)
